--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="border_clo">#ccc</color>
     <color name="text_clo">#333</color>
     <color name="white">#fff</color>
-    <color name="blue">#419DE4</color>
+    <color name="blue">#0066FF</color>
     
     <color name="pull_refresh_textview">#000000</color>
     <color name="gold">#000000</color>
