--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="gold">#000000</color>
     <color name="black">#000000</color>
     <color name="transparent">#00000000</color>
+    
+    <color name="topbar_bg">#0066FF</color>
 </resources>
