--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -5,4 +5,14 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
      <dimen name="common_margin">16dip</dimen>
+     
+     <!-- topbar -->
+
+    <dimen name="topbar_height">50dp</dimen>
+    <dimen name="topbar_title_padding">50dp</dimen>
+    <dimen name="topbar_btn_min_width">40dp</dimen>
+    <dimen name="bottombar_height">48dp</dimen>
+    <dimen name="bottom_drag_min_width">80dp</dimen>
+    <dimen name="bottom_drag_max_height">100dp</dimen>
+    <dimen name="bottom_drag_height">78dp</dimen>
 </resources>
