--- a/res/layout/personinformation_collect.xml
+++ b/res/layout/personinformation_collect.xml
@@ -25,7 +25,7 @@
                 android:layout_gravity="right"
                 android:layout_marginTop="6.0dip"
                 android:gravity="center"
-                android:text=" 用户状态"
+                android:text=""
                 android:textColor="@color/darkblue"
                 android:textSize="12.0sp" />
         </LinearLayout>
@@ -595,33 +595,31 @@
                                     android:textColor="#ff000000"
                                     android:textSize="12.0sp" />
 
-                                <Button
-                                    android:id="@id/btnAreaSelec"
-                                    android:layout_width="80.0dip"
+                                <Spinner
+                                    android:id="@+id/spnAreaSelec"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="fill_parent"
                                     android:layout_marginLeft="3.0dip"
                                     android:layout_marginRight="3.0dip"
                                     android:gravity="center"
-                                    android:text="搜查区域"
                                     android:textSize="10.0sp" />
 
                                 <TextView
                                     android:id="@id/textView12"
                                     android:layout_width="wrap_content"
                                     android:layout_height="fill_parent"
-                                    android:gravity="center"
+                                    android:gravity="center" 
                                     android:text="搜查\n地点"
                                     android:textColor="#ff000000"
                                     android:textSize="12.0sp" />
 
-                                <Button
-                                    android:id="@id/btnPlaceSelec"
-                                    android:layout_width="fill_parent"
+                                <Spinner
+                                    android:id="@+id/spnPlaceSelec"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="fill_parent"
                                     android:layout_marginLeft="3.0dip"
                                     android:layout_marginRight="3.0dip"
                                     android:gravity="center"
-                                    android:text="搜查地点选择"
                                     android:textSize="10.0sp" />
                             </LinearLayout>
                         </LinearLayout>
